# K-beauty_agent

./: README.md  download  env.example  k_beauty_agent  products_verified.csv  pyproject.toml  render.yaml  requirements.txt  review_summaries.csv  sample_products.json
data/: products_verified.csv  review_summaries.csv
k_beauty_agent/: agent.py  cli.py  config.py  database.py  init.py  knowledge_base.py  llm.py  localization.py  models.py  openai_client.py  personalization.py  recommender.py  reviews.py  serializers.py  skin.py  storage.py  web.py
static/: admin.html  admin.js  app.js  index.html  styles.css
tests/: test_agent.py  test_personalized_service.py
