[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "k-beauty-agent"
version = "0.1.0"
description = "Explainable ingredient-based K-beauty recommendation agent"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.99.0",
  "httpx>=0.27.0",
]

[project.scripts]
k-beauty-agent = "k_beauty_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["k_beauty_agent*"]
